test/bad/resolve/BadField.hs
module BadField where

data Bad
  = A {x :: Int}
  | B {x :: String}
